# food-purchase-planner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: cd-deploy.yml  ci-build-publish-image.yml  ci-lint-test.yml
src/config/: exceptions.py  forms.py  settings.py  urls.py  views.py
src/config/static/css/: modals.css  recipe_manager.css
src/config/static/js/: api.js  cook_today.js  friends.js  ingredients.js  init.js  menu.js  password_toggle.js  (+5 more)
src/config/templates/: base.html  cook_today.html  recipe_manager.html
src/planner/: admin.py  api.py  apps.py  bot.py  mcp_server.py  models.py  permissions.py  serializers.py  services.py  services_friends.py  services_import.py  signals.py  tests.py  tests_import.py  urls.py  views_api.py  views_friends.py  views_telegram.py
src/planner/data/: ingredients.csv  recipes.csv
src/planner/migrations/: 0001_initial.py  0002_friendrequest_userfriendcode.py  0003_add_can_edit_recipes_to_friendrequest.py  0003_add_menu_model.py  0004_add_menu_model.py  0005_menuslot_replace_user_with_menu.py  0005_populate_menus_for_existing_users.py  0006_menuslot_menu_not_null.py  0006_menuslot_replace_user_with_menu.py  0006_menuslot_unique_menu_day_meal.py  0007_add_is_primary_to_menu.py  0007_menuslot_unique_menu_day_meal.py  0008_remove_unique_menu_day_meal.py  0009_recipecategory_recipe_category_and_more.py  0010_telegram_linking.py  0011_add_menuslot_servings_menushare_useractiveMenu.py  0012_remove_menu_is_primary.py  0013_menuslotassignment.py
src/planner/tests/: test_api_contract.py  test_api_edge_cases.py  test_assignments.py  test_config.py  test_import.py  test_mcp_server.py  test_menu_sharing.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_signals.py
(+24 files in other folders)
