[project]
name = "food-purchase-planner"
version = "0.1.0"
description = "Web app for planning food purchases: recipes, ingredients, and shopping lists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.0.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[rate-limiter]>=21.0",
    "sentry-sdk>=2.55.0",
    "logtide-sdk[django]>=0.8.5",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
    "djangorestframework-stubs>=3.16.8",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.15.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
mypy_path = "src"
explicit_package_bases = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = "src"
